[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"

[dependencies]
crc = "2.0"
scursor = "0.1"
#tokio = { version = "1", features = ["net", "sync", "io-util", "util", "io-std", "time", "rt", "rt-multi-thread", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = {version = "*", features = ["codec"]}
rodbus = {version = "*"}
tracing = "0.1"
tokio-stream = "0.1"
tokio-test = "0.4.2"
sfio-tokio-mock-io = "0.2"
tracing-subscriber = "0.2"
tokio-serial = { version = "5.4", default-features = false, optional = true }
clap = { version = "3.2.20", features = ["derive"] }
futures = "0.3.25"
async-std = "1.12.0"
futures-lite = "1.12.0"
mpsc = "0.1.0"
rand = "0.8.5"
ndarray = "0.15.6"
rand_distr = "0.4.3"
ndarray-linalg = {version = "*", features = ["intel-mkl-static"]}
mt_logger = {version = "*"}
serde ={version = "1.0.152" ,features = ["derive"]}
csv = "1.2.0"
chrono = {version = "*"}
statrs = {version = "*"}

[features]
config_type_1 = []
config_type_2 = []
config_type_3 = []

# features by default
default = ["config_type_2"]
